argocd/kustomized-helm/tyk/example-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tyk
  labels:
    app: gateway-tyk-gateway
spec:
  ports:
  - name: tyk-proxy
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: tyk-control
    port: 9696
    targetPort: 9696
    protocol: TCP
  selector:
    app: gateway-tyk-gateway
    release: tyk
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: tyk-grpc
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
  labels:
    app: gateway-tyk-gateway
spec:
  ports:
  - name: tyk-proxy
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: tyk-control
    port: 9696
    targetPort: 9696
    protocol: TCP
  selector:
    app: gateway-tyk-gateway
    release: tyk
  type: NodePort
