argocd/kustomized-helm/tyk/example-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyk
  labels:
    app: gateway-tyk-gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/conditions.tyk-grpc: '[{"field":"http-header","httpHeaderConfig":{"httpHeaderName":"Content-Type","values":["application/grpc"]}}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:...:certificate/...
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/tags: "Team=devops,Server=etc,Service=tyk-gateway,Security_level=moderate,Environment=dev"
    alb.ingress.kubernetes.io/healthcheck-path: /hello
    alb.ingress.kubernetes.io/healthcheck-port: tyk-control
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/security-groups: sg-...
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: tyk.example.io
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: tyk
            port:
              name: tyk-control
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tyk-grpc
            port:
              name: tyk-proxy
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tyk
            port:
              name: tyk-proxy
